Rendering questions from JSON

--- a/quiz.html
+++ b/quiz.html
@@ -78,6 +78,7 @@
             <label><input type="radio" name="question3">Dont know</label>
         </div>
     </div>
+    <div id="allQuestions"></div>
 </div>
 
 </body>
