Added functionality to results

--- a/quiz.html
+++ b/quiz.html
@@ -35,50 +35,9 @@
 </nav>
 
 <div class="container">
-    <h3>How much do you <em>really</em> know about dolphins?</h3>
-    <div class="question">
-        <p class="ask-question">How old is the average dolphin</p>
-        <div class="answer-question radio radio-group">
-            <label><input type="radio" name="question1">20</label>
-        </div>
-        <div class="radio">
-            <label><input type="radio" name="question1">400</label>
-        </div>
-        <div class="radio">
-            <label><input type="radio" name="question1">800</label>
-        </div>
-        <div class="radio">
-            <label><input type="radio" name="question1">-1</label>
-        </div>
-    </div>
-    <div class="question">
-        <p class="ask-question">What is the name of my pet dolphin ?</p>
-        <div class="answer-question radio radio-group">
-            <label><input type="radio" name="question2">mathew</label>
-        </div>
-        <div class="radio">
-            <label><input type="radio" name="question2">mark</label>
-        </div>
-        <div class="radio">
-            <label><input type="radio" name="question2">luke</label>
-        </div>
-        <div class="radio">
-            <label><input type="radio" name="question2">dolphin</label>
-        </div>
-    </div>
-    <div class="question">
-        <p class="ask-question">A crocodile is anothger word for a dolphin ? </p>
-        <div class="answer-question radio radio-group">
-            <label><input type="radio" name="question3">True</label>
-        </div>
-        <div class="radio">
-            <label><input type="radio" name="question3">False</label>
-        </div>
-        <div class="radio">
-            <label><input type="radio" name="question3">Dont know</label>
-        </div>
-    </div>
+    <h3>How much do you <em>really</em> know about <i>[country name]</i>?</h3>
     <div id="allQuestions"></div>
+    <input type="submit" id="submit">
 </div>
 
 </body>
