--- a/quiz.html
+++ b/quiz.html
@@ -24,7 +24,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">We heart dolphins</a>
+            <a style="color:black;" class="navbar-brand" href="index.html">We heart dolphins</a>
         </div>
         <ul class="nav navbar-nav">
             <li><a href="#">Get involved</a></li>
@@ -34,53 +34,25 @@
     </div>
 </nav>
 
-<div class="container">
-    <h3>How much do you <em>really</em> know about dolphins?</h3>
-    <div class="question">
-        <p class="ask-question">How old is the average dolphin</p>
-        <div class="answer-question radio radio-group">
-            <label><input type="radio" name="question1">20</label>
-        </div>
-        <div class="radio">
-            <label><input type="radio" name="question1">400</label>
-        </div>
-        <div class="radio">
-            <label><input type="radio" name="question1">800</label>
-        </div>
-        <div class="radio">
-            <label><input type="radio" name="question1">-1</label>
-        </div>
-    </div>
-    <div class="question">
-        <p class="ask-question">What is the name of my pet dolphin ?</p>
-        <div class="answer-question radio radio-group">
-            <label><input type="radio" name="question2">mathew</label>
-        </div>
-        <div class="radio">
-            <label><input type="radio" name="question2">mark</label>
-        </div>
-        <div class="radio">
-            <label><input type="radio" name="question2">luke</label>
-        </div>
-        <div class="radio">
-            <label><input type="radio" name="question2">dolphin</label>
-        </div>
-    </div>
-    <div class="question">
-        <p class="ask-question">A crocodile is anothger word for a dolphin ? </p>
-        <div class="answer-question radio radio-group">
-            <label><input type="radio" name="question3">True</label>
-        </div>
-        <div class="radio">
-            <label><input type="radio" name="question3">False</label>
-        </div>
-        <div class="radio">
-            <label><input type="radio" name="question3">Dont know</label>
-        </div>
-    </div>
-    <div id="allQuestions"></div>
+<div align="center" id="allQuestions" class="container">
+    <h2>How much do you <em>really</em> know about equality?</h2>
+    <hr>
+</div>
+<div align="center">
+<form class="form-inline">
+
+    <input class="form-control mb-2 mr-sm-2 mb-sm-0" id="genderIn" placeholder="Gender...">
+    <input class="form-control mb-2 mr-sm-2 mb-sm-0" id="regionIn" placeholder="Region...">
+    <input class="form-control mb-2 mr-sm-2 mb-sm-0" id="ageIn" placeholder="Age...">
+    <br>
+    <button class='btn btn-primary btn-lg' id="submitFormBt">Submit</button>
+</form>
 </div>
 
 </body>
+
+<footer>
+
+</footer>
 
 </html>
