--- a/index.html
+++ b/index.html
@@ -1,90 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="CodeForGood2017">
-    <meta name="author" content="Noah Florin-Sefton">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="CodeForGood2017">
+  <meta name="author" content="Noah Florin-Sefton">
 
-    <title>CodeForGood2017</title>
+  <title>CodeForGood2017</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/quiz.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <!-- Custom fonts for this template -->
-    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+</head>
 
-    <!-- Custom styles for this template -->
-    <link href="css/clean-blog.css" rel="stylesheet">
+<body>
 
-  </head>
-
-  <body>
-
-    <!-- Navigation -->
-    <nav style="background-image: url('imgs/streak.png');z-index:5;" class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-      <div class="container">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fa fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="quiz.html">Take the test</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="post.html">Get involved</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Page Header -->
-    <header class="masthead" style="background-image: url('imgs/child.jpeg')">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="page-heading">
-              <h1>Free the dolphins</h1>
-              <span class="subheadinbg">Splishy sploshy</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
-
-    <!-- Main Content -->
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Each day, over 10 million dolphins are forced from the homes, viciously torn apart from their dolphin babies and forced into captivity and
-          cruel living conditions. We must put a stop to this. Free the dolphins is UK based chaity who have been apalled with the living conditions of
-          these beautiful creatures. Inspired by dolphins, we designed a quiz. Strangely, the quiz is not even about dolphins. Its actually rasing awareneess of social
-          equality issues in third world countries, and helping to prevent the spread of disease. Deep. use the links at the top of the page to either take the quiz
-          or head straight to the results to see the issue for yourself. </p>
-
-        </div>
-      </div>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a style="position:relative;color:black;" class="navbar-brand" href="index.html">3Lunch</a>
     </div>
+    <ul class="nav navbar-nav">
+      <li><a href="#">Get involved</a></li>
+      <li><a href="quiz.html">Take the quiz</a></li>
+      <li><a class="active" href="javascript:;">See the facts</a></li>
+    </ul>
+  </div>
+</nav>
+<div style="height:800px;background-image:url('imgs/poverty.png')">
+<div align="center" class="headerBox">
+  <h1 class="heading" style="color:red;display:inline;">3</h1><h1 class="heading" style="color:black;display:inline;">Lunch</h1>
+</div>
+  <div align="center" style="padding-left:80px;padding-right:80px;height:500px;background-color:rgba(100,100,100,0.3)">
+    <p id='info-text'>We fuel progress towards gender equality by making sure girls’ and women’s movements, rights advocates and decision makers
+      have easy-to-use data and evidence to guide efforts to reach the Global Goals by 2030 and leave no one behind.</p>
+    <button onclick="location.href='quiz.html'" class="btn btn-primary btn-lg">Take the test now</button>
+  </div>
+</div>
 
-    <hr>
+</body>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="js/jquery.min.js"></script>
-
-    <!-- Custom scripts for this template -->
-    <script src="js/clean-blog.min.js"></script>
-
-  </body>
+<footer></footer>
 
 </html>
