changed img src

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </ul>
   </div>
 </nav>
-<div style="height:800px;background-image:url('imgs/poverty.png')">
+<div style="height:800px;background-image:url('imgs/child.jpeg')">
 <div align="center" class="headerBox">
   <h1 class="heading" style="color:red;display:inline;">3</h1><h1 class="heading" style="color:black;display:inline;">Lunch</h1>
 </div>
