--- a/startbootstrap-agency-gh-pages/index.html
+++ b/startbootstrap-agency-gh-pages/index.html
@@ -199,7 +199,7 @@
     </section>
 
     <!-- About -->
-    <section id="How can I involve?">
+    <section id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
