--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="startbootstrap-agency-gh-pages/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="startbootstrap-agency-gh-pages/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -30,7 +30,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-        <img class="navbar-brand js-scroll-trigger" href="#page-top" src="img/about/5.jpg" alt="" style="height: 100px; width: 180px;">
+        <img class="navbar-brand js-scroll-trigger" href="#page-top" src="startbootstrap-agency-gh-pages/img/about/5.jpg" alt="" style="height: 100px; width: 180px;">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fa fa-bars"></i>
@@ -57,7 +57,7 @@
         <div class="intro-text">
             <div class="intro-heading text-uppercase">Creating a world where no girl or woman is invisible</div>
             <div class="intro-lead-in">How much do you know about the women around the world? </div>
-            <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Attempt the quiz!</a>
+            <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="quiz.html">Attempt the quiz!</a>
         </div>
     </div>
 </header>
@@ -117,7 +117,7 @@
                             <i class="fa fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+                    <img class="img-fluid" src="startbootstrap-agency-gh-pages/img/portfolio/01-thumbnail.jpg" alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>Maternal mortality rate</h4>
@@ -131,7 +131,7 @@
                             <i class="fa fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+                    <img class="img-fluid" src="startbootstrap-agency-gh-pages/img/portfolio/02-thumbnail.jpg" alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>Early marriage rate</h4>
@@ -145,7 +145,7 @@
                             <i class="fa fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+                    <img class="img-fluid" src="startbootstrap-agency-gh-pages/img/portfolio/03-thumbnail.jpg" alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>Share of women in the labour force</h4>
@@ -159,7 +159,7 @@
                             <i class="fa fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+                    <img class="img-fluid" src="startbootstrap-agency-gh-pages/img/portfolio/04-thumbnail.jpg" alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>The priority of gender equality </h4>
@@ -173,7 +173,7 @@
                             <i class="fa fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+                    <img class="img-fluid" src="startbootstrap-agency-gh-pages/img/portfolio/05-thumbnail.jpg" alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>Attention given to gender equality</h4>
@@ -187,7 +187,7 @@
                             <i class="fa fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+                    <img class="img-fluid" src="startbootstrap-agency-gh-pages/img/portfolio/06-thumbnail.jpg" alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>Women in the labour force</h4>
@@ -212,7 +212,7 @@
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image">
-                            <img class="rounded-circle " src="img/about/1.jpg" alt="" style="height: 200px; width: 240px;">
+                            <img class="rounded-circle " src="startbootstrap-agency-gh-pages/img/about/1.jpg" alt="" style="height: 200px; width: 240px;">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -225,7 +225,7 @@
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <img class="rounded-circle " src="img/about/2.jpg" alt="" style="height: 210px; width: 210px;">
+                            <img class="rounded-circle " src="startbootstrap-agency-gh-pages/img/about/2.jpg" alt="" style="height: 210px; width: 210px;">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -238,7 +238,7 @@
                     </li>
                     <li>
                         <div class="timeline-image">
-                            <img class="rounded-circle " src="img/about/3.jpg" alt="" style="height: 220px; width: 220px;">
+                            <img class="rounded-circle " src="startbootstrap-agency-gh-pages/img/about/3.jpg" alt="" style="height: 220px; width: 220px;">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -251,7 +251,7 @@
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <img class="rounded-circle " src="img/about/4.jpg" alt="" style="height: 200px; width: 210px;">
+                            <img class="rounded-circle " src="startbootstrap-agency-gh-pages/img/about/4.jpg" alt="" style="height: 200px; width: 210px;">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
